[package]
name = "askew"
version = "0.2.0"
authors = ["Piotr Dobiech"]
edition = "2021"
rust-version = "1.72"
description = "Curves editor"
repository = "https://github.com/pitcer/askew"
license = "MIT"
publish = false

[features]
default = ["x11"]
x11 = ["softbuffer/x11", "winit/x11"]
wayland = ["softbuffer/wayland", "winit/wayland"]

[dependencies]
anyhow = "1.0.75"
atoi = "2.0.0"
fontdue = "0.7.3"
log = "0.4.20"
num-traits = "0.2.16"
rand = "0.8.5"
replace_with = "0.1.7"
serde_json = "1.0.107"
static_assertions = "1.1.0"
thiserror = "1.0.48"
time = "0.3.28"

[dependencies.bytemuck]
version = "1.14.0"
features = ["derive"]

[dependencies.chumsky]
version = "1.0.0-alpha.4"
default-features = false
features = ["std"]

[dependencies.clap]
version = "4.4.4"
features = ["derive"]

[dependencies.image]
version = "0.24.7"
default-features = false
features = ["png"]

[dependencies.lru]
version = "0.11.1"
default-features = false

[dependencies.serde]
version = "1.0.188"
features = ["derive"]

[dependencies.simplelog]
version = "0.12.1"
default-features = false
features = ["termcolor", "local-offset"]

[dependencies.softbuffer]
version = "0.3.1"
default-features = false

[dependencies.tiny-skia]
version = "0.11.1"
default-features = false
features = ["std", "simd"]

[dependencies.wasmtime]
version = "12.0.2"
features = ["component-model"]

[dependencies.winit]
version = "0.28.6"
default-features = false

[dev-dependencies]
criterion = "0.5.1"

[workspace]
members = ["scripts/wasm/rotate"]

[[bench]]
name = "convex_hull"
harness = false

[[bench]]
name = "bezier"
harness = false
