[package]
name = "askew"
version = "0.2.0"
authors = ["Piotr Dobiech"]
edition = "2021"
rust-version = "1.73"
description = "Curves editor"
repository = "https://github.com/pitcer/askew"
license = "MIT"
publish = false

[features]
default = ["x11"]
x11 = ["softbuffer/x11", "winit/x11"]
wayland = ["softbuffer/wayland", "winit/wayland"]

[dependencies]
anyhow = "1.0.75"
async-channel = "2.0.0"
async-lock = "3.0.0"
async-net = "1.8.0"
async-task = "4.5.0"
async-trait = "0.1.74"
bitvec = "1.0.1"
delegate = "0.10.0"
fontdue = "0.7.3"
futures-lite = "2.0.0"
itertools = "0.11.0"
log = "0.4.20"
num-traits = "0.2.17"
parse-display = "0.8.2"
rand = "0.8.5"
replace_with = "0.1.7"
serde_json = "1.0.107"
shlex = "1.2.0"
static_assertions = "1.1.0"
thiserror = "1.0.50"
time = "0.3.30"
toml = "0.8.6"
wasmtime-wasi = "14.0.2"

[dependencies.bytemuck]
version = "1.14.0"
features = ["derive"]

[dependencies.clap]
version = "4.4.7"
features = ["derive"]

[dependencies.image]
version = "0.24.7"
default-features = false
features = ["png"]

[dependencies.lru]
version = "0.12.0"
default-features = false

[dependencies.serde]
version = "1.0.190"
features = ["derive"]

[dependencies.simplelog]
# Git version used for better paris integration
git = "https://github.com/drakulix/simplelog.rs"
rev = "2c98e48114aa95a62b2860e05f1f275bced41e74"
default-features = false
features = ["termcolor", "local-offset", "paris"]

[dependencies.softbuffer]
version = "0.3.2"
default-features = false

[dependencies.tiny-skia]
version = "0.11.2"
default-features = false
features = ["std", "simd"]

[dependencies.wasmtime]
version = "14.0.2"
# Disables 'cache', 'jitdump', 'parallel-compilation', 'pooling-allocator', 'vtune', 'wat'
default-features = false
features = ["async", "component-model", "cranelift"]

[dependencies.winit]
version = "0.29.2"
default-features = false
# TODO: remove after softbuffer will update rwh to 0.6.0
features = ["rwh_05"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "convex_hull"
harness = false

[[bench]]
name = "bezier"
harness = false
