[package]
name = "askew"
version = "0.2.0"
authors = ["Piotr Dobiech"]
edition = "2021"
rust-version = "1.74"
description = "Curves editor"
repository = "https://github.com/pitcer/askew"
license = "MIT"
publish = false

[features]
default = ["x11"]
x11 = ["softbuffer/x11", "winit/x11"]
wayland = ["softbuffer/wayland", "winit/wayland"]

[dependencies]
anyhow = "1.0.75"
# TODO: remove, use versions from smol dependency
async-channel = "2.0.0"
async-executor = "1.6.0"
async-io = "2.1.0"
async-lock = "3.0.0"
async-net = "2.0.0"
async-task = "4.5.0"
#----
async-trait = "0.1.74"
bitvec = "1.0.1"
delegate = "0.10.0"
fontdue = "0.7.3"
# TODO: remove, use version from smol dependency
futures-lite = "2.0.0"
itertools = "0.12.0"
log = "0.4.20"
num-traits = "0.2.17"
parse-display = "0.8.2"
rand = "0.8.5"
replace_with = "0.1.7"
serde_json = "1.0.108"
shlex = "1.2.0"
#smol = "1.3.0"
static_assertions = "1.1.0"
thiserror = "1.0.50"
time = "0.3.30"
toml = "0.8.8"
wasmtime-wasi = "15.0.0"

[dependencies.tinyvec]
version = "1.6.0"
features = ["rustc_1_57", "std"]

[dependencies.indexmap]
version = "2.1.0"
features = ["serde"]

[dependencies.bytemuck]
version = "1.14.0"
features = ["derive"]

[dependencies.clap]
version = "4.4.8"
features = ["derive"]

[dependencies.image]
version = "0.24.7"
default-features = false
features = ["png"]

[dependencies.lru]
version = "0.12.1"
default-features = false

[dependencies.serde]
version = "1.0.193"
features = ["derive"]

[dependencies.simplelog]
# Git version used for better paris integration
git = "https://github.com/drakulix/simplelog.rs"
rev = "2c98e48114aa95a62b2860e05f1f275bced41e74"
default-features = false
features = ["termcolor", "local-offset", "paris"]

[dependencies.softbuffer]
version = "0.4.0"
default-features = false

[dependencies.tiny-skia]
version = "0.11.2"
default-features = false
features = ["std", "simd"]

[dependencies.wasmtime]
version = "15.0.0"
# Disables 'cache', 'jitdump', 'parallel-compilation', 'pooling-allocator', 'vtune', 'wat'
default-features = false
features = ["async", "component-model", "cranelift"]

[dependencies.winit]
version = "0.29.3"
default-features = false
features = ["rwh_06"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "convex_hull"
harness = false

[[bench]]
name = "bezier"
harness = false

[lints.rust]
future_incompatible = "warn"
nonstandard_style = "warn"
rust_2018_idioms = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
exit = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
get_unwrap = "warn"
let_underscore_must_use = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
multiple_inherent_impl = "warn"
panic = "warn"
rc_buffer = "warn"
rest_pat_in_fully_bound_structs = "warn"
str_to_string = "warn"
string_add = "warn"
string_to_string = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
use_debug = "warn"
verbose_file_reads = "warn"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
match_wildcard_for_single_variants = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
unused_self = "allow"
unnecessary_wraps = "allow"
